= 1.1.5 =
* Customize > Widgets section don't show advanced settings toggle button - FIXED

= 1.1.4 =
* Hover animations helper functions - ADDED
* Flex layout helper classes - ADDED
* Constant added for version number SUPER_DUPER_VER - ADDED

= 1.1.3 =
* Preview mode can now be changed from block setting icon - ADDED
* text_color_custom now implemented for inline custom colors - ADDED

= 1.1.2 =
* BlockStrap theme color pickers will now add custom colors from FSE - ADDED

= 1.1.1 =
* props.id deprecated and replaced with props.clientId, this could cause issues with wrong content displayed - FIXED
* We will now attempt to auto-recover all blocks - ADDED
* Nested blocks support -  ADDED
* New input types supported for blocks 'image' and 'images' - ADDED
* Many helper functions added for input arguments - ADDED
* Font Awesome icons for block icons updated to  5.15.4 - UPDATED

= 1.0.30 =
* Block icon not loading when WordPress installed on sub-directory - FIXED

= 1.0.29 =
* Shortcode button not working in editor on Divi theme builder - FIXED

= 1.0.28 =
* Some extra escaping block parameters - CHANGED
* Block editor multi-select dropdown style issue - FIXED
* If tinyMCE is undefined the inserter can fail - FIXED
* block_show_advanced() sometimes has no arguments - FIXED

= 1.0.27 =
* Category settings loads only 10 categories on CPT change - FIXED
* Hook added to filter class & attributes for Elementor widget output - ADDED
* Functions file added for individual function calls - ADDED

= 1.0.26 =
* Error on setting array option value in block editor - FIXED

= 1.0.25 =
* PHP Warning if default field value not set - FIXED

= 1.0.24 =
* WP 5.7 Gutenberg widgets screen has JS error which breaks page saving - FIXED
* WP 5.7 Gutenberg widgets screen legacy widgets have no `show advanced` button - FIXED

= 1.0.23 =
* Rows argument now available to group arguments to the one row - ADDED

= 1.0.22 =