@@ -5,7 +5,7 @@ if ( ! defined( 'ABSPATH' ) ) {
 
 if ( ! class_exists( 'WP_Super_Duper' ) ) {
 
-	define( 'SUPER_DUPER_VER', '1.1.4' );
+	define( 'SUPER_DUPER_VER', '1.1.5' );
 
 	/**
 	 * A Class to be able to create a Widget, Shortcode or Block to be able to output content for WordPress.
@@ -1748,11 +1748,14 @@ function sd_set_view_type($device){
  * Try to auto-recover blocks.
  */
 function sd_auto_recover_blocks() {
+	console.log('recover blocks');
 	var recursivelyRecoverInvalidBlockList = blocks => {
 		const _blocks = [...blocks]
+		// const _blocks = wp.data.select('core/block-editor').getBlocks();
 		let recoveryCalled = false
 		const recursivelyRecoverBlocks = willRecoverBlocks => {
 			willRecoverBlocks.forEach(_block => {
+				consol.log(_block);
 				if (isInvalid(_block)) {
 					recoveryCalled = true
 					const newBlock = recoverBlock(_block)
@@ -1779,6 +1782,10 @@ function sd_auto_recover_blocks() {
 	var recoverBlocks = blocks => {
 		return blocks.map(_block => {
 			const block = _block
+//
+// if ( _block.name === 'core/template-part') {
+// 	const template = wp.data.select('core/block-editor').getTemplate(_block);console.log(template )
+// }
 
 			// If the block is a reusable block, recover the Stackable blocks inside it.
 			if (_block.name === 'core/block') {
@@ -1853,7 +1860,8 @@ window.onload = function() {
 	// fire a second time incase of load delays.
 	setTimeout(function(){
 		sd_auto_recover_blocks();
-	}, 2000);
+		console.log('arb');
+	}, 5000);
 };
 
 // fire when URL changes also.
@@ -1951,6 +1959,11 @@ new MutationObserver(() => {
 				// font color
 				if( $args['text_color_custom'] !== undefined && $args['text_color_custom'] !== '' ){
 					$styles['color'] =  $args['text_color_custom'];
+				}
+
+				// font line height
+				if( $args['font_line_height'] !== undefined && $args['font_line_height'] !== '' ){
+					$styles['lineHeight'] =  $args['font_line_height'];
 				}
 
                 return $styles;
@@ -2137,7 +2150,7 @@ jQuery(function() {
 					 *                             registered; otherwise `undefined`.
 					 */
 					registerBlockType('<?php echo str_replace( "_", "-", sanitize_title_with_dashes( $this->options['textdomain'] ) . '/' . sanitize_title_with_dashes( $this->options['class_name'] ) );  ?>', { // Block name. Block names must be string that contains a namespace prefix. Example: my-plugin/my-custom-block.
-						apiVersion: 2,
+						apiVersion: <?php echo isset($this->options['block-api-version']) ? absint($this->options['block-api-version']) : 2 ; ?>,
                         title: '<?php echo addslashes( $this->options['name'] ); ?>', // Block title.
 						description: '<?php echo addslashes( $this->options['widget_ops']['description'] )?>', // Block title.
 						icon: <?php echo $this->get_block_icon( $this->options['block-icon'] );?>,//'<?php echo isset( $this->options['block-icon'] ) ? esc_attr( $this->options['block-icon'] ) : 'shield-alt';?>', // Block icon from Dashicons → https://developer.wordpress.org/resource/dashicons/.
